@@ -44,6 +44,7 @@ by the agent may be different. This was done in order to improve the integration
 * Breakdown metrics are now tracked per service (when using APM Server 8.0) - {pull}2208[#2208]
 * Add support for Spring AMQP batch API - {pull}1716[#1716]
 * Add the (current) transaction name to the error (when using APM Server 8.0) - {pull}2235[#2235]
+* The JVM/JMX metrics are reported for each service name individually (when using APM Server 8.0) - {pull}2233[#2233]
 
 [float]
 ===== Performance improvements
